<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmer_calculator"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"/>
    <EditText
        android:id="@+id/decimalNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_decimal_number"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/binaryNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_binary_number"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="@+id/decimalNumber"
        app:layout_constraintTop_toBottomOf="@+id/decimalNumber"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/octalNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_octal_number"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="@+id/binaryNumber"
        app:layout_constraintTop_toBottomOf="@+id/binaryNumber"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/hexaNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_your_hexa_number"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="@+id/octalNumber"
        app:layout_constraintTop_toBottomOf="@+id/octalNumber"
        android:inputType="numberDecimal"/>
    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clear_all"
        android:textSize="@dimen/medium_text_size" />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/calculate"
        android:textSize="@dimen/medium_text_size"
        android:onClick="onClickSubmitButton"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>